changes to some specs successfully

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="box">
                     <img src="profile-1.jpeg" alt="">
                     <div class="text">Suraj</div>
-                    <p>Procrastinated member Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Senior developer and appreciable member of tech team Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="card">
