successfully updated some specs

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 <!-- footer section start -->
 <footer>
-    <span>Created By <a href="">Atul</a> | <span class="far fa-copyright"></span> 2021 All rights are not reserved, not even a single. So churao bc XD.</span>
+    <span>Created By <a href="">Suraj</a> | <span class="far fa-copyright"></span> 2021 All rights are reserved.</span>
 </footer>
 
 <script src="script.js"></script>
