updated profile and about page

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Suraj<span>savvy.</span></a></div>
+            <div class="logo"><a href="#">@<span>SurajK.</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#home" class="menu-btn">&#127968; Home </a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
+                <!-- <li><a href="#services" class="menu-btn">Services</a></li> -->
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <!-- <li><a href="#teams" class="menu-btn">Teams</a></li> -->
+                <li><a href="#contact" class="menu-btn">Connect</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -39,17 +39,17 @@
       <div class="max-width">
           <div class="row">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1">Hello, myself</div>
                 <div class="text-2">Suraj</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Know more</a>
+                <a href="https://github.com/Surajsavy">Know more <i class="fab fa-github"></i></a>
             </div>
         </div>
     </div>
     <div class="icon_menu">    
         <ul class="social">
             <li><a href="https://www.linkedin.com/in/suraj-kandwal-90b104158" class="social_media"><img class= "wobble" src="linkedin.png"></a></li>
-            <li><a href="https://github.com/Surajsavy" class="social_media"><img class= "wobble" src="github.png"></a></li>
+            <li><a href="https://twitter.com/surajKandwal26" class="social_media"><img class= "wobble" src="twitter.png"></a></li>
             <li><a href="https://www.instagram.com/surajkandwal2000/" class="social_media"><img class= "wobble" src="instagram.png"></a></li>
         </ul>
     </div>
@@ -65,43 +65,19 @@
                 <img src="profile-1.jpeg" alt="">
             </div>
             <div class="column right">
-                <div class="text">I'm Suraj and I'm a <span class="typing-2"></span></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                <a href="#">Download CV</a>
-            </div>
-        </div>
-    </div>
-</section>
+                <div class="text">Myself Suraj and I'm a <span class="typing-2"></span></div>
+                <p>I was born and brought up in Rishikesh and I finished my schooling in 2018 from R.S.V Roop Nagar-2 and I am currently persuing Engineering in Electronics and Communication from Medi-Caps University, Indore.
 
-<!-- services section start -->
-<section class="services" id="services">
-    <div class="max-width">
-        <h2 class="title">My services</h2>
-        <div class="serv-content">
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-paint-brush"></i>
-                    <div class="text">Web Designing</div>
-                    <p>Web design is a process of designing and developing websites. Unlike web development, which is mainly about functionality, web design includes aesthetics and is concerned about the look-and-feel of the site as much as the functionality</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-chart-line"></i>
-                    <div class="text">Logo design</div>
-                    <p>A Logo is a design symbolizing ones organization. It is a design that is used by an organization for its letterhead, advertising material, and signs as an emblem by which the organization can easily be recognized, also called logotype.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-code"></i>
-                    <div class="text">Development</div>
-                    <p>Web development is the work involved in developing a website for the Internet.It can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.</p>
-                </div>
+                I like to solve puzzles and new reading. I love to play Badminton and Chess whenever I get time. I’m into reading novels as well, Robert kiyosaki being my favorite writer.
+                <br>
+
+                I’m happy to step into college life, which provides more freedom and where, finally, I don’t have to come in a uniform. Post-college, I aspire to work in Software/IT industry.
+
+                I’m particularly strong in Problem solving and Frontend. If anyone requires support in these areas, I’ll be glad to help. I look forward to meeting each one of you in the coming days.</p>
+                <a href="https://www.canva.com/design/DAFB-GAknZE/JN1a9N14kPE-GOCni95MpQ/edit?utm_content=DAFB-GAknZE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">My Resume</a>
             </div>
         </div>
     </div>
-</div>
 </section>
 
 <!-- skills section start -->
@@ -111,14 +87,14 @@
         <div class="skills-content">
             <div class="column left">
                 <div class="text">My creative skills & experiences.</div>
-                <p>I have Lorem ipsum since 2017 dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                <a href="#">Read more</a>
+                <p>I am learing these skills, where I require to meet targets. I do deal with many problems on a daily basis in learing new skill set or improving current one. These daily basis problems taught me how to handle errors or issues in dynamic environment. I am learning to adapt to different type of issue senarios. </p>
+                <a href="https://surajsavy.github.io/pentartstudio/">My latest project </a>
             </div>
             <div class="column right">
                 <div class="bars">
                     <div class="info">
                         <span>HTML</span>
-                        <span>80%</span>
+                        <span>70%</span>
                     </div>
                     <div class="line html"></div>
                 </div>
@@ -136,51 +112,21 @@
                     </div>
                     <div class="line js"></div>
                 </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Ruby on Rails</span>
+                        <span>30%</span>
+                    </div>
+                    <div class="line ror"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Mysql</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="line mysql"></div>
+                </div>
 
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- teams section start -->
-<section class="teams" id="teams">
-    <div class="max-width">
-        <h2 class="title">My teams</h2>
-        <div class="carousel owl-carousel">
-            <div class="card">
-                <div class="box">
-                    <img src="profile-3.jpeg" alt="">
-                    <div class="text">Suhani</div>
-                    <p>Abhi school me hai but intelligent hai mujhse Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="profile-2.jpeg" alt="">
-                    <div class="text">Himanshu</div>
-                    <p>Professional banda Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="profile-1.jpeg" alt="">
-                    <div class="text">Suraj</div>
-                    <p>Senior developer and appreciable member of tech team Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="profile-4.jpeg" alt="">
-                    <div class="text">Pulkit</div>
-                    <p>Bechare ko abhi kuch nahi aata Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="box">
-                    <img src="profile-5.jpeg" alt="">
-                    <div class="text">Manu</div>
-                    <p>Best hai ye banda aur product manager hamara Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
             </div>
         </div>
     </div>
@@ -192,21 +138,21 @@
         <h2 class="title">Contact me</h2>
         <div class="contact-content">
             <div class="column left">
-                <div class="text">Get in Touch</div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                <div class="text">Get in Touch </div>
+                <p>Hey there, connect with me by sending your message and if you like my portfolio then make sure to check out my github profile.</p>
                 <div class="icons">
                     <div class="row">
                         <i class="fas fa-user"></i>
                         <div class="info">
                             <div class="head">Name</div>
-                            <div class="sub-title">Suraj</div>
+                            <div class="sub-title">Suraj Kandwal</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="info">
                             <div class="head">Address</div>
-                            <div class="sub-title">Delhi,India</div>
+                            <div class="sub-title">Delhi, India</div>
                         </div>
                     </div>
                     <div class="row">
@@ -220,23 +166,25 @@
             </div>
             <div class="column right">
                 <div class="text">Message me</div>
-                <form class="contact-form" action="#" method="POST">
+                <form class="contact-form" action="https://formsubmit.co/surajkandwal98714@gmail.com" method="POST">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value=" https://surajsavy.github.io/myportfolio.github.io/thankyou.html">
                     <div class="fields">
                         <div class="field name">
-                            <input type="text" class="fullname" placeholder="Name">
+                            <input type="text" name="name" required id="name_name" class="fullname" placeholder="Name">
                         </div>
                         <div class="field email">
-                            <input type="text" class="email-input" placeholder="Email">
+                            <input type="text" name="email" required id="email_email" class="email-input" placeholder="Email">
                         </div>
                     </div>
                     <div class="field">
-                        <input type="text" class="subject" placeholder="Subject">
+                        <input type="text" name="subject" required id="subject_subject" class="subject" placeholder="Subject">
                     </div>
                     <div class="field textarea">
-                        <textarea class="message" cols="30" rows="10" placeholder="Message.."></textarea>
+                        <textarea id="message_message" name="message" required class="message" cols="30" rows="10" placeholder="Message.."></textarea>
                     </div>
                     <div class="button-area">
-                        <button class="send-msg" type="submit" name="send">Send message</button>
+                        <button class="send-msg" type="submit">Send message</button>
                     </div>
                 </form>
             </div>
@@ -248,7 +196,7 @@
 <footer>
     <span>Created By <a href="">Suraj</a> | <span class="far fa-copyright"></span> 2021 All rights are reserved.</span>
 </footer>
-
+<!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
 <script src="script.js"></script>
 </body>
 </html>
