--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 I’m happy to step into college life, which provides more freedom and where, finally, I don’t have to come in a uniform. Post-college, I aspire to work in Software/IT industry.
 
                 I’m particularly strong in Problem solving and Frontend. If anyone requires support in these areas, I’ll be glad to help. I look forward to meeting each one of you in the coming days.</p>
-                <a href="https://www.canva.com/design/DAFB-GAknZE/JN1a9N14kPE-GOCni95MpQ/edit?utm_content=DAFB-GAknZE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">My Resume</a>
+                <a href="https://drive.google.com/file/d/1cf-DLZGMsXOWf2jhDLijj4Lamipp9fzO/view">My Resume</a>
             </div>
         </div>
     </div>
