Updated skill section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,22 @@
                 <p>I am learing these skills, where I require to meet targets. I do deal with many problems on a daily basis in learing new skill set or improving current one. These daily basis problems taught me how to handle errors or issues in dynamic environment. I am learning to adapt to different type of issue senarios. </p>
                 <a href="https://surajsavy.github.io/pentartstudio/">My latest project </a>
             </div>
+            
             <div class="column right">
+                 <div class="bars">
+                    <div class="info">
+                        <span>Python</span>
+                        <span>60%</span>
+                    </div>
+                    <div class="line python"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>DSA</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="line DSA"></div>
+                </div>
                 <div class="bars">
                     <div class="info">
                         <span>HTML</span>
